# spatial-networks

./: .env.template  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pypi_doc.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: deploy_to_pypi.yml
notebooks/: 01_basic_data_structures.ipynb  01_introduction.ipynb  02_basic_graphs.ipynb  03_planarization.ipynb  04_io_and_loaders.ipynb  my_graph.json
spatial_networks/: __init__.py  new.py  spatial_networks.py  utils.py
spatial_networks/data/: paris_subway.json
spatial_networks/utils/: __init__.py  core_utils.py  generators.py  geometry_utils.py  graph_io.py  graph_utils.py  loaders.py  plot_utils.py
